--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- connect to boostrap and css files -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -37,6 +38,7 @@
                 <div class="row">
                     <h4 id="futureforecast">5-Day Forecast:</h4></div>
                 <div class="row dayblocks">
+                    <!-- create blocks for future forecast -->
                     <div class="col-2 forecast" id="box1"></div>
                     <div class="col-2 forecast" id="box2"></div>
                     <div class="col-2 forecast" id="box3"></div>
@@ -48,7 +50,7 @@
     </main>
 
 </body>
-
+<!-- connect to javascript file -->
 <script src="assets/js/script.js"></script>
 </body>
 
